<resources>
    <string name="app_name">ApprizMe</string>
    <string name="title_activity_menu_lateral">MenuLateralActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ImagemPerfil">KKKK</string>
    <string name="imgbutton01">ImgButton01</string>
    <string name="imagemperfil">imagemPerfil</string>
    <string name="returnbutton01">returnButton01</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
            <string name="prompt_email">Email</string>
            <string name="prompt_password">Password (optional)</string>
            <string name="action_sign_in">Sign in or register</string>
            <string name="action_sign_in_short">Sign in</string>
            <string name="error_invalid_email">This email address is invalid</string>
            <string name="error_invalid_password">This password is too short</string>
            <string name="error_incorrect_password">This password is incorrect</string>
            <string name="error_field_required">This field is required</string>
            <string name="permission_rationale">"Contacts permissions are needed for providing email
            completions."</string>
            <string name="label_nome">Nome:</string>
            <string name="label_email">Email:</string>
            <string name="label_senha">Senha:</string>
            <string name="label_conf_Senha">Conf. Senha:</string>
            <string name="txt_button_enviar">Enviar</string>
            <string name="txt_buttom_entrar">Entrar</string>






</resources>
